[workspace]
members = [
    "hinoko/sys",
    "hinoko",
]

exclude = [
    "gir",
]

default-members = [
    "hinoko",
]

# For my convenience to generate README.md for each crates by my tool.
[workspace.metadata.library.hinoko]
repository = "https://git.kernel.org/pub/scm/libs/ieee1394/libhinoko.git/"
purpose = """
operate OHCI 1394 hardware via Linux FireWire character device for isochronous communication in
IEEE 1394 bus.
"""
