[package]
authors = ["Takashi Sakamoto <o-takashi@sakamocchi.jp>"]
build = "build.rs"
description = "FFI bindings for libhinoko0 library"
edition = "2018"
license = "MIT"
links = "hinoko"
name = "hinoko-sys"
repository = "https://github.com/takaswie/hinoko-rs/"
version = "0.1.0"
[package.metadata.docs.rs]
features = ["dox"]
[package.metadata.system-deps.hinoko]
name = "hinoko"
version = "0.7.1"

[lib]
name = "hinoko_sys"

[build-dependencies]
pkg-config = "0.3.7"
system-deps = "6"

[dependencies]
libc = "0.2"

[dependencies.glib]
package = "glib-sys"
version = "0.15"

[dependencies.gobject]
package = "gobject-sys"
version = "0.15"

[dev-dependencies]
shell-words = "1.0.0"
tempfile = "3"

[features]
dox = []
