[package]
build = "build.rs"
edition = "2018"
links = "hinoko"
name = "hinoko-sys"
version = "0.0.91"
# For publishing.
authors = ["Takashi Sakamoto"]
categories = ["external-ffi-bindings", "hardware-support", "os::linux-apis"]
description = "FFI bindings for hinoko library"
documentation = "https://docs.rs/hinoko-sys/"
exclude = ["Gir.toml"]
homepage = "https://alsa-project.github.io/gobject-introspection-docs/"
keywords = ["ieee1394", "firewire", "linux", "glib", "ffi"]
license = "MIT"
repository = "https://github.com/takaswie/hinoko-rs/"
[package.metadata.docs.rs]
features = ["dox"]
[package.metadata.system-deps.hinoko]
name = "hinoko"
version = "0.7.1"

[lib]
name = "hinoko_sys"

[build-dependencies]
pkg-config = "0.3.7"
system-deps = "6"

[dependencies]
libc = "0.2"

[dependencies.glib]
package = "glib-sys"
version = "0.15"

[dependencies.gobject]
package = "gobject-sys"
version = "0.15"

[dev-dependencies]
shell-words = "1.0.0"
tempfile = "3"

[features]
# To suppress linking to C library to generate documentation.
dox = []
