[package]
name = "hinoko"
edition = "2018"
version = "0.1.0"
# For publishing.
authors = ["Takashi Sakamoto <o-takashi@sakamocchi.jp>"]
description = "API bindings for libhinoko0 library"
license = "MIT"
repository = "https://github.com/takaswie/hinoko-rs/"

[lib]
name = "hinoko"

[dependencies]
libc = "0.2"
bitflags = "1.0"
glib = "0.15"
ffi = {package = "hinoko-sys", path = "../hinoko-sys", version = "0.1"}

[dev-dependencies]
gir-format-check = "^0.1"
once_cell = "1.5"
