[package]
name = "hinoko"
edition = "2021"
version = "0.4.0"
# For publishing.
authors = ["Takashi Sakamoto"]
categories = ["api-bindings", "hardware-support", "os::linux-apis"]
description = "API bindings for hinoko library"
documentation = "https://docs.rs/hinoko/"
exclude = ["Gir.toml"]
homepage = "https://alsa-project.github.io/gobject-introspection-docs/"
keywords = ["ieee1394", "firewire", "linux", "glib"]
license = "MIT"
repository = "https://git.kernel.org/pub/scm/libs/ieee1394/hinoko-rs.git/"
[package.metadata.docs.rs]
features = ["dox"]

[lib]
name = "hinoko"

[dependencies]
libc = "0.2"
bitflags = "1.0"
glib = "0.15"
hinawa = "0.9"
ffi = {package = "hinoko-sys", version = "0.4.0"}

[dev-dependencies]
gir-format-check = "^0.1"
once_cell = "1.5"

[features]
# To suppress linking to C library to generate documentation.
dox = ["glib/dox", "hinawa/dox"]
