[package]
name = "hinoko"
edition = "2021"
version = "0.6.0"
# For publishing.
authors = ["Takashi Sakamoto"]
categories = ["api-bindings", "hardware-support", "os::linux-apis"]
description = "API bindings for hinoko library"
documentation = "https://docs.rs/hinoko/"
exclude = ["Gir.toml"]
homepage = "https://alsa-project.github.io/gobject-introspection-docs/"
keywords = ["ieee1394", "firewire", "linux", "glib"]
license = "MIT"
repository = "https://git.kernel.org/pub/scm/libs/ieee1394/hinoko-rs.git/"
[package.metadata.docs.rs]
rustc-args = ["--cfg", "docsrs"]
rustdoc-args = ["--cfg", "docsrs", "--generate-link-to-definition"]

[lib]
name = "hinoko"

[dependencies]
libc = "0.2"
bitflags = "2.6"
glib = "0.20"
hinawa = "0.12"
ffi = {package = "hinoko-sys", version = "0.6.0"}

[dev-dependencies]
gir-format-check = "^0.1"
