[package]
build = "build.rs"
edition = "2021"
links = "hinoko"
name = "hinoko-sys"
# For publishing.
version = "0.4.0"
authors = ["Takashi Sakamoto"]
categories = ["external-ffi-bindings", "hardware-support", "os::linux-apis"]
description = "FFI bindings for hinoko library"
documentation = "https://docs.rs/hinoko-sys/"
exclude = ["Gir.toml"]
homepage = "https://alsa-project.github.io/gobject-introspection-docs/"
keywords = ["ieee1394", "firewire", "linux", "glib", "ffi"]
license = "MIT"
repository = "https://git.kernel.org/pub/scm/libs/ieee1394/hinoko-rs.git/"

[package.metadata.docs.rs]
rustc-args = ["--cfg", "docsrs"]
rustdoc-args = ["--cfg", "docsrs", "--generate-link-to-definition"]
all-features = true

[package.metadata.system-deps.hinoko]
name = "hinoko"
version = "1.0.0"

[lib]
name = "hinoko_sys"

[build-dependencies]
pkg-config = "0.3.7"
system-deps = "6"

[dependencies]
libc = "0.2"

[dependencies.glib]
package = "glib-sys"
version = "0.18"

[dependencies.gobject]
package = "gobject-sys"
version = "0.18"

[dependencies.hinawa]
package = "hinawa-sys"
version = "0.10"

[dev-dependencies]
shell-words = "1.0.0"
tempfile = "3"

[features]
